--- a/document/literature.bib
+++ b/document/literature.bib
@@ -379,8 +379,16 @@
 }
 
 @book{cicd_with_kubernetes,
-  title     = { CI/CD with Kubernetes },
+  title     = {CI/CD with Kubernetes},
   author    = {Williams, Alex},
+  year      = {2018},
+  url       = {https://www.cncf.io/free-ebook-ci-cd-with-kubernetes/},
+  publisher = {The New Stack}
+}
+
+@book{cicd_with_kubernetes_devops,
+  title     = {CI/CD with Kubernetes - DevOps Patterns},
+  author    = {Scott, Rob},
   year      = {2018},
   url       = {https://www.cncf.io/free-ebook-ci-cd-with-kubernetes/},
   publisher = {The New Stack}
